fixed overflow error

--- a/src/Home.css
+++ b/src/Home.css
@@ -13,6 +13,7 @@ html *{
 .body{
   margin:30px;
   margin-top:50px;
+  overflow-x: hidden;
 }
 
 .App-header{
